Add Title & Desc for Images

--- a/simply.html
+++ b/simply.html
@@ -3,7 +3,8 @@
 <head>
     <link rel="shortcut icon" href="/images/favicon.png" sizes="16x16">
     <title>Miawu</title>
-    <link rel="stylesheet" href="/css/SimplyHover.css">
+    <link rel="stylesheet" href="/css/Simply.css">
+    <link rel="stylesheet" href="/css/ImageHover.css">
 </head>
 <body>
     <div class="simply">
@@ -37,26 +38,203 @@
           </div>
           <div class="simply_content-item" data-tab="Gallery">
             <center>
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/logo.png?raw=true" height="200" width="200" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-camp-1.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-camp-2.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-racing-win.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-survivor.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-tanyajawab.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/basecamp-1.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/basecamp-2.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/dyto.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/nami.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/noobnf.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/soba.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-1.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-2.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-3.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-4.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-5.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-6.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-7.png?raw=true" height="200" width="400" alt="">
-            <img src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-8.png?raw=true" height="200" width="400" alt="">
+              <div class="image">
+                  <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/logo.png?raw=true" height="200" width="200" alt="logo_miawu">
+                  <div class="image__overlay">
+                    <div class="image__title">Logo Miawu</div>
+                  </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-camp-1.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 1.0</div>
+                  <p class="image__description">
+                    Camp-1
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-camp-2.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 1.0</div>
+                  <p class="image__description">
+                    Camp-2
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-racing-win.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 1.0</div>
+                  <p class="image__description">
+                    Racing Winner
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-survivor.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 1.0</div>
+                  <p class="image__description">
+                    Survivor
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/1.0/fs-event-tanyajawab.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 1.0</div>
+                  <p class="image__description">
+                    Tanya Jawab
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/basecamp-1.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Camp-1
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/basecamp-2.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Camp-2
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/dyto.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Drawing Winner - Dyto#4135
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/nami.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Drawing Winner - Namithaodila#0000
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/noobnf.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Drawing Winner - Noobnf#0000
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/2.0/Drawing/soba.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Event Miawu 2.0</div>
+                  <p class="image__description">
+                    Drawing Winner - Soba#1085
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-1.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Onetime#8401
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-2.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Verox1#0000
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-3.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Imnoob#5424
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-4.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Daniimuts#0000
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-5.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Adamjuz#9960
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-6.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Angelmnzz#3256
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-7.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Spieky#0000
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="image">
+                <img class="image__img" src="https://github.com/miawuu/miawuu.github.io/blob/master/images/events/tujuh-belasan/lomba-gambar-8.png?raw=true" height="200" width="400" alt="">
+                <div class="image__overlay">
+                  <div class="image__title">Tujuh belas-an (gambar)</div>
+                  <p class="image__description">
+                    Yama#2676
+                  </p>
+                </div>
+              </div>
+              <hr>
             </center>
           </div>
           <div class="simply_content-item" data-tab="About">
